--- a/.github/workflows/check-type.yml
+++ b/.github/workflows/check-type.yml
@@ -1,7 +1,10 @@
 name: PR Has Type
 
 on:
-  pull_request: [labeled, opened, reopened]
+  pull_request:
+    types:
+      - labeled
+      - opened
 
 jobs:
   fail-on-no-type:
