--- a/.github/workflows/check-type.yml
+++ b/.github/workflows/check-type.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   fail-on-no-type:
     runs-on: ubuntu-latest
-    if: ${{ ! contains(github.event.issue.labels.*.name, 't-patch') && ! contains(github.event.issue.labels.*.name, 't-minor') }}
     steps:
-      - name: Type label is missing
-        run: echo 'PR is missing type label' && exit 1
+      - name: Check type label
+        run: |
+          echo ${{contains(github.event.issue.labels.*.name, 't-patch')}}
+          exit 1
