--- a/.github/workflows/check-type.yml
+++ b/.github/workflows/check-type.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           types=0
 
+          echo "${{contains(github.event.issue.labels.*.name, 't-patch')}}"
           if [[ "${{contains(github.event.issue.labels.*.name, 't-patch')}}" == "true" ]];
           then
             types=$((types+1))
