--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
             cd $(mktemp -d)
             git clone https://github.com/${{ github.repository }} build
             cd build
-            bash deploy.sh
+            bash scripts/deploy.sh
