Deploy on pushes to main, add CODEOWNERS

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,14 @@
 name: Deploy
 
 on:
-  workflow_dispatch:
+  push:
+    branches: ["main"]
+    paths:
+      - "src/**"
+      - "migrations/**"
+      - "docker-compose.yml"
+      - "Dockerfile"
+      - "scripts/**"
 
 jobs:
   deploy:
