--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,22 @@ jobs:
             echo "tagged=no" >> "$GITHUB_OUTPUT"
           fi
 
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.DEPLOY_KEY }}
+
+      - name: Get GitHub App User ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - run: |
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+
       - name: Update package version
         if: ${{ steps.check_tag.outputs.tagged == 'no' }}
         run: |
@@ -39,8 +55,6 @@ jobs:
           next_version="$base-alpha.$next_n"
           jq --arg v "$next_version" '.version = $v' package.json > package.tmp.json
           mv package.tmp.json package.json
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add package.json
           git commit -m "Update package version to $next_version"
           git tag $next_version
