--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   check_tagged:
     runs-on: ubuntu-latest
+    environment: production
     outputs:
       is_tagged: ${{ steps.check_tag.outputs.tagged }}
     steps:
