--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,8 @@ jobs:
         run: |
           if [ -z "$(git tag --points-at HEAD)" ]; then
             echo "tagged=no" >> "$GITHUB_OUTPUT"
+          else
+            echo "tagged=yes" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Update package version
@@ -66,6 +68,7 @@ jobs:
           git push
   deploy:
     needs: check_tagged
+    if: ${{ needs.check_tagged.outputs.is_tagged == 'yes' }}
     runs-on: ubuntu-latest
     environment: production
     env:
