--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "zlib-sync": "^0.1.9"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0"
   }
 }
