--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
           jq --arg v "$next_version" '.version = $v' package.json > package.tmp.json
           mv package.tmp.json package.json
           npm install --package-lock-only
-          git add package.json
+          git add package.json package-lock.json
           git commit -m "Update package version to $next_version"
           git tag $next_version
           git push --tags
